--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <img src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" width="100" height="100" />
-        <h1>Mighty Ducks Hockey League</h1>
-        
-    </header>
-    <main>
+        <img class="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
+        <h1>Mighty Ducks Hockey League</h1>        
         <nav>
             <a href="./index.html">Home</a>
             <a>About MDHL</a>
             <a href="./contact.html">Contact</a>
         </nav>
-        <figure>
+    </header>
+    <main>
+        <h2 class="titulo">About MDHL</h2>
+        <!--figure>
             <img src="./img/hockey_2.jpg" alt="Foto de niño jugando al Hockey" width="350" height="350">
-        </figure>
-        <section>
+        </figure!-->
+        <section class="texto">
             <h2>Mision</h2>                          
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
                learning and playing soccer, with opportunities to learn and practice skills related to the game of 
