--- a/contact.html
+++ b/contact.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <img src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" width="100" height="100" />
-        <h1>Mighty Ducks Hockey League</h1>
-        
-    </header>
-    <main>
+        <img class="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
+        <h1>Mighty Ducks Hockey League</h1>        
         <nav>
             <a href="./index.html">Home</a>
             <a href="./aboutMDHL.html">About MDHL</a>
             <a >Contact</a>
         </nav>
-        <figure>
+    </header>
+    <main>
+        <h2 class="titulo">Contact</h2>
+        <!--figure>
             <img src="./img/hockey_3.jpg" alt="Foto de niños jugando al Hockey" width="350" height="350" >
-        </figure>
-        <div>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
+        </figure!-->
+        <div class="texto">
+            <p>Please email us at<a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
         </div>   
     </main>
