--- a/index.html
+++ b/index.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./estilos/style.css">
     <title>Contacto</title>
 </head>
 <body>
     <header>
-        <img src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks" width="100" height="100" />
+        <img class= "logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
         <h1>Mighty Ducks Hockey League</h1>
-        
-    </header>
-    <main>
         <nav>
             <a>Home</a>
             <a href="./aboutMDHL.html">About MDHL</a>
             <a href="./contact.html">Contact</a>
-        </nav>
-        <figure>
+        </nav> 
+    </header>
+    <main>        
+        <!--figure>
             <img src="./img/hockey_1.jpg" alt="Foto de niño jugando al Hockey" width="350" height="350">
-        </figure> 
-        <section>
-            <h2>Upcoming Events</h2>
+        </figure-->
+        <h2 class="titulo">Upcoming Events</h2> 
+        <article class="texto">                      
             <div>
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
@@ -35,7 +35,7 @@
                 <h3>September 1</h3>            
                 <p>First Game of the Season (Check Game Schedule for details)</p>                
             </div>
-        </section>   
+        </article>   
     </main>
 </body>
 </html>
