--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <!--link rel="stylesheet" href="./estilos/style.css"-->
+    <link rel="stylesheet" href="./estilos/style2.css">
     <title>Contacto</title>
 </head>
 <body>
@@ -12,9 +13,9 @@
         <img class= "logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a>Home</a>
-            <a href="./aboutMDHL.html">About MDHL</a>
-            <a href="./contact.html">Contact</a>
+            <a class="nav pag-actual" href="#">Home</a>
+            <a class="nav" href="./aboutMDHL.html">About MDHL</a>
+            <a class="nav" href="./contact.html">Contact</a>
         </nav> 
     </header>
     <main>        
