--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link rel="stylesheet" href="./estilos/style.css"-->
-    <link rel="stylesheet" href="./estilos/style2.css">
+    <!--link rel="stylesheet" href="./styles/style.css"-->
+    <!--link rel="stylesheet" href="./styles/style2.css"-->
+    <link rel="stylesheet" href="./styles/stylelibre.css">
     <title>Contacto</title>
 </head>
 <body>
