--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -3,10 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--link rel="stylesheet" href="./styles/style.css"-->
-    <!--link rel="stylesheet" href="./styles/style2.css"-->
-    <link rel="stylesheet" href="./styles/stylelibre.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Contacto</title>
 </head>
 <body>
@@ -17,6 +15,8 @@
             <a class="nav" href="./index.html">Home</a>
             <a class="nav pag-actual" href="#">About MDHL</a>
             <a class="nav" href="./contact.html">Contact</a>
+            <a class="nav" href="./rules.html">Rules & policies </a>
+            <a class="nav" href="./game-info.html">Game Info</a>
         </nav>
     </header>
     <main>
