Task 3 version final

--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -21,9 +21,9 @@
     </header>
     <main>
         <h2 class="titulo">About MDHL</h2>
-        <!--figure>
-            <img src="./img/hockey_2.jpg" alt="Foto de niño jugando al Hockey" width="350" height="350">
-        </figure!-->
+        <figure>
+            <img src="./img/hockey_2.jpg" alt="Foto de niño jugando al Hockey">
+        </figure>
         <section class="texto">
             <h2>Mision</h2>                          
             <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
