--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
+        <figure>
         <img class="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
+        </figure>
         <h1>Mighty Ducks Hockey League</h1>        
         <nav>
             <a class="nav" href="./index.html">Home</a>
@@ -21,9 +23,9 @@
     </header>
     <main>
         <h2 class="titulo">Contact</h2>
-        <!--figure>
-            <img src="./img/hockey_3.jpg" alt="Foto de niños jugando al Hockey" width="350" height="350" >
-        </figure!-->
+        <figure>
+            <img src="./img/hockey_3.jpg" alt="Foto de niños jugando al Hockey">
+        </figure!>
         <div class="texto">
             <p>Please email us at<a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
             <p>We reply to your email as soon as we can.</p>
