--- a/game-info.html
+++ b/game-info.html
@@ -12,15 +12,16 @@
         <img class= "logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
         <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a class="nav" href="#">Home</a>
+            <a class="nav" href="./index.html">Home</a>
             <a class="nav" href="./aboutMDHL.html">About MDHL</a>
             <a class="nav" href="./contact.html">Contact</a>
             <a class="nav" href="./rules.html">Rules & policies </a>
             <a class="nav pag-actual" href="#">Game Info</a>
-        </nav> 
+        </nav>   
     </header>
-    <main class="texto">   
-      <section> 
+    <main >
+      <h2 class="titulo">Game info</h2>    
+      <section class="info"> 
         <h3>Fall Schedule</h3>   
         <table>            
             <caption> *All games take place on Saturday </caption>
@@ -86,15 +87,16 @@
             </tbody>
         </table>
         <div>
-            <p>Facility type: Outdoor</p>
-            <p>Aditional Information:if deemed necessary by MDHL games may by shortened or cancelled due to extreme wheather conditions. </p>
+            <p><span class="neg">Facility type:</span> Outdoor</p>
+            <p><span class="neg">Aditional Information:</span>if deemed necessary by MDHL games may by shortened or cancelled due to extreme wheather conditions. </p>
         </div>
         <div>
-            <p>Please direct all questions to: Michael Randall, League Coordinator</p>
-            <p>Phone: (630) 690-8132</p>
-            <p>Email:michael.randall@mdhihockey.org</p>
+            <p><span class="neg">Please direct all questions to:</span> Michael Randall, League Coordinator</p>
+            <p><span class="neg">Phone:</span> (630) 690-8132</p>
+            <p><span class="neg">Email:</span>michael.randall@mdhihockey.org</p>
         </div>
      </section>         
     </main>
 </body>
 </html>
+<span></span>
