--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         </nav> 
     </header>
     <main>        
-        <!--figure>
-            <img src="./img/hockey_1.jpg" alt="Foto de niño jugando al Hockey" width="350" height="350">
-        </figure-->
-        <h2 class="titulo">Upcoming Events</h2> 
+       
+        <h2 class="titulo">Upcoming Events</h2>  
+        <figure>
+            <img src="./img/hockey_1.jpg" alt="Foto de niño jugando al Hockey" >
+        </figure>
         <article class="texto">                      
             <div>
                 <h3>August 4</h3>
