--- a/game-info.html
+++ b/game-info.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Contacto</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
         <img class= "logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
+        <h1>Mighty Ducks Hockey League</h1>           
+    </header>
+    <main >
+      <nav>
             <a class="nav" href="./index.html">Home</a>
             <a class="nav" href="./aboutMDHL.html">About MDHL</a>
             <a class="nav" href="./contact.html">Contact</a>
             <a class="nav" href="./rules.html">Rules & policies </a>
             <a class="nav pag-actual" href="#">Game Info</a>
-        </nav>   
-    </header>
-    <main >
+            <a class="nav" href="./registration.html">Registration</a> 
+        </nav>  
       <h2 class="titulo">Game info</h2>    
       <section class="info"> 
         <h3>Fall Schedule</h3>   
@@ -31,6 +32,7 @@
                     <th>Teams</th>
                     <th>Location</th>
                     <th>Times</th>
+                    <th>Maps</th>
                 </tr>
             </thead>
            <tbody>
@@ -39,50 +41,60 @@
                     <th>U1 and U4</th>
                     <th>AJ Katzenmaier</th>
                     <th>9:30 a.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7804581651085!2d-87.8649932851521!3d42.325881145253135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sar!4v1675689555570!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>                
                     <th>U3 and U2</th>
                     <th>Greenbay</th>
                     <th>1:00 p.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380035.09619006177!2d-87.95141409221263!3d41.913838725505485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675688051646!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>
                     <th rowspan="2">9/08</th>
                     <th>U5 and U6</th>
                     <th>Howard A Yeager</th>
                     <th>9:30 a.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45856.54651516646!2d-87.8361983982906!3d42.32087139675582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675687786236!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>                
                     <th>U6 and U1</th>
                     <th>Marjorie P Hart</th>
                     <th>1:00 p.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d56496.53878820685!2d-87.6469194173694!3d41.90933763052216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses!2sar!4v1675687871510!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
+
                 </tr>
                 <tr>
                     <th rowspan="2">9/15</th>
                     <th>U2 and U4</th>
                     <th>North</th>
                     <th>9:30 a.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95018.73752758767!2d-87.77795883750004!3d41.9071449!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses!2sar!4v1675687977777!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>                
                     <th>U3 and U5</th>
                     <th>AJ Katzenmaier</th>
                     <th>1:00 p.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.7804581651085!2d-87.8649932851521!3d42.325881145253135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses!2sar!4v1675689555570!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>
                     <th rowspan="2">9/22</th>
                     <th>U1 and U3</th>
                     <th>South</th>
                     <th>9:30 a.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d94850.26030521245!2d-88.01788073749998!3d42.020217099999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb7ad3c474b63%3A0x93bdf85af2a839ed!2sSOUTH%20ELEMENTARY%20SCHOOL!5e0!3m2!1ses!2sar!4v1675688011581!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>                
                     <th>U2 and U6</th>
                     <th>Howard A Yeager</th>
                     <th>1:00 p.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d45856.54651516646!2d-87.8361983982906!3d42.32087139675582!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses!2sar!4v1675687786236!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
                 <tr>
                     <th>9/29</th>
                     <th>U4 and U6</th>
                     <th>Greenbay</th>
                     <th>9:30 a.m.</th>
+                    <th><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d380035.09619006177!2d-87.95141409221263!3d41.913838725505485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses!2sar!4v1675688051646!5m2!1ses!2sar" width="100" height="100" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                 </tr>
             </tbody>
         </table>
