--- a/aboutMDHL.html
+++ b/aboutMDHL.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Contacto</title>
+    <title>Mighty Ducks Hockey League</title>
 </head>
 <body>
     <header>
         <img class="logo" src="./img/Logo_Mighty_ducks-01.png" alt="logo mighty ducks"/>
-        <h1>Mighty Ducks Hockey League</h1>        
+        <h1>Mighty Ducks Hockey League</h1>      
+    </header>
+    <main>
         <nav>
             <a class="nav" href="./index.html">Home</a>
             <a class="nav pag-actual" href="#">About MDHL</a>
             <a class="nav" href="./contact.html">Contact</a>
             <a class="nav" href="./rules.html">Rules & policies </a>
             <a class="nav" href="./game-info.html">Game Info</a>
+            <a class="nav" href="./registration.html">Registration</a> 
         </nav>
-    </header>
-    <main>
         <h2 class="titulo">About MDHL</h2>
         <figure>
             <img src="./img/hockey_2.jpg" alt="Foto de niño jugando al Hockey">
